--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:entries="@array/currencies"
-        android:gravity="end" />
+        android:gravity="end"
+    />
 
     <Button
         android:id="@+id/delete_button"
