--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -1,27 +1,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="64dp"
     android:orientation="horizontal">
-    <EditText
-        android:id="@+id/number_edit_text"
-        android:layout_width="0dp"
+
+    <LinearLayout
+        android:layout_width="197dp"
         android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:inputType="phone" />
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/number_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_weight="5"
+            android:digits="0123456789."
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/rate"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_weight="1"
+            android:text="" />
+    </LinearLayout>
+
     <Spinner
         android:id="@+id/type_spinner"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
         android:layout_weight="3"
         android:entries="@array/currencies"
-        android:gravity="end"
-    />
+        android:gravity="end" />
 
     <Button
         android:id="@+id/delete_button"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@android:drawable/ic_delete"
         android:onClick="onDelete" />
+
 </LinearLayout>
