--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -21,7 +21,9 @@
             android:layout_width="match_parent"
             android:layout_height="16dp"
             android:layout_weight="1"
-            android:text="" />
+            android:fontFamily="monospace"
+            android:text=""
+            android:textSize="11sp" />
     </LinearLayout>
 
     <Spinner
