--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/number_edit_text"
+                    android:id="@+id/btc_number_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_weight="5"
