--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context="com.minimalisticapps.priceconverter.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -103,7 +103,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    tools:context=".MainActivity">
+                    tools:context="com.minimalisticapps.priceconverter.MainActivity">
 
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
