--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_weight="5"
-                        android:digits="0123456789."
+                        android:digits="0123456789.,"
                         android:inputType="number" />
 
                     <TextView
