Fix ugly long numbers (ugly fix), closes #3

--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_weight="5"
+            android:singleLine="true"
             android:digits="0123456789."
             android:inputType="number" />
 
